Atualizando a classe TaskRepositoryImpl